fix media screen padding

--- a/src/index.css
+++ b/src/index.css
@@ -158,5 +158,10 @@ body {
   .currency-converter {
     margin: 15px;
   }
+
+  .form-currency-group .currency-select {
+  padding: 0 1px;
+  ;
+}
   
 }
